<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_kortex_vision</name>
  <version>0.0.1</version>
  <description>Package allowing access to the Kinova vision module color and depth stream.</description>
  <maintainer email="google@google.com">~</maintainer>
  <url type="repository">~</url>
  <license>BSD</license>
  <build_depend>ament_cmake</build_depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>
  <depend>class_loader</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
